Lesson 13.3. Object.create()

--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,7 @@
 <html>
 
 <body>
-    <script>
-        console.log('hello, OOP');
-    </script>
+    <script src="./prototype-inheritance.js"></script>
 </body>
 
 </html>
